# typiano

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
Formula/: typiano.rb
docs/: README.ja.md  README.ko.md  README.zh.md
songs/: bach-invention-1.json  bach-prelude-c.json  beethoven-5th.json  beethoven-pathetique-2.json  bolero.json  canon-in-d.json  chopin-ballade-1.json  chopin-etude-10-3.json  chopin-nocturne-9-2.json  chopin-prelude-4.json  chopin-raindrop.json  chopin-waltz-64-2.json  clair-de-lune-suite.json  clair-de-lune.json  comptine.json  debussy-arabesque-1.json  debussy-doctor-gradus.json  debussy-reverie.json  eine-kleine.json  fantasie-impromptu.json  flight-of-bumblebee.json  fur-elise.json  grieg-morning-mood.json  gymnopedie-1.json  la-campanella.json  liszt-liebestraum-3.json  moonlight-sonata.json  river-flows-in-you.json  satie-gnossienne-1.json  schubert-impromptu-90-3.json  schumann-traumerei.json  spring-waltz.json  swan-lake.json  turkish-march.json  waltz-of-flowers.json
src/: audio.rs  cli.rs  config.rs  daemon.rs  engine.rs  input.rs  ipc.rs  main.rs  songs.rs
tools/: generate_samples.sh  midi2typiano.py
